force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/Apttus_Approval__ApprovalsCustomConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds global defaults for context objects processed by the approval engine</description>
    <label>Approvals Custom Config</label>
</CustomObject>