force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ApprovalSummaryPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalSummaryPage__c</fullName>
    <description>The name of the approval summary page. This will be the global default if not overridden for the approval process.</description>
    <inlineHelpText>The name of the approval summary page. This will be the global default if not overridden for the approval process.</inlineHelpText>
    <label>Approval Summary Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>