force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__BackupAdminUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
    <description>The name of backup administrator or leave blank to use the global default.</description>
    <inlineHelpText>The name of backup administrator or leave blank to use the global default.</inlineHelpText>
    <label>Backup Admin User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>