force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ChildObjectTypes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ChildObjectTypes__c</fullName>
    <description>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</description>
    <inlineHelpText>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</inlineHelpText>
    <label>Child Object Types</label>
    <type>TextArea</type>
</CustomField>