force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__IncludeChildObjAttachmentsForSubmit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IncludeChildObjAttachmentsForSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not to include attachments associated with the current context object&apos;s children in the attachment selection screen when submitting for approval.</description>
    <inlineHelpText>Indicates whether or not to include attachments associated with the current context object&apos;s children in the attachment selection screen when submitting for approval.</inlineHelpText>
    <label>Include Child Obj Attachments For Submit</label>
    <type>Checkbox</type>
</CustomField>