force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__MyApprovalsPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__MyApprovalsPage__c</fullName>
    <description>Name of the My Approvals page used for showing consolidated approval requests</description>
    <inlineHelpText>Name of the My Approvals page used for showing consolidated approval requests</inlineHelpText>
    <label>My Approvals Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>