force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ParentReferenceField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ParentReferenceField__c</fullName>
    <description>Parent object reference</description>
    <inlineHelpText>Parent object reference</inlineHelpText>
    <label>Parent Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>