force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__PreviewPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__PreviewPage__c</fullName>
    <description>Name of the Preview page used for showing consolidated approval requests preview</description>
    <inlineHelpText>Name of the Preview page used for showing consolidated approval requests preview</inlineHelpText>
    <label>Preview Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>