force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ReminderEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ReminderEmailTemplate__c</fullName>
    <description>The name of the Email Template used to send notifications when an approval request needs a reminder.</description>
    <inlineHelpText>The name of the Email Template used to send notifications when an approval request needs a reminder.</inlineHelpText>
    <label>Reminder Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>