force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ShowAllDocumentVersionDetails__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ShowAllDocumentVersionDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this setting shows all agreement versions from the document version details related list.  When unchecked (default) it only shows the most recent version from the document versions related list.</description>
    <inlineHelpText>When checked, this setting shows all agreement versions from the document version details related list.  When unchecked (default) it only shows the most recent version from the document versions related list.</inlineHelpText>
    <label>Show All Document Version Details</label>
    <type>Checkbox</type>
</CustomField>