force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__UseFilesInsteadOfNotesAndAttachments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__UseFilesInsteadOfNotesAndAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</description>
    <inlineHelpText>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</inlineHelpText>
    <label>Use Files Instead of Notes &amp; Attachments</label>
    <type>Checkbox</type>
</CustomField>